--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,13 @@
     "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.0.12",
+    "mongoose": "^6.13.3",
     "nodemailer": "^6.7.0",
     "paytmchecksum": "^1.5.0",
     "razorpay": "^2.0.7",
     "shortid": "^2.2.16"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
